# gpt4docs

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
autodocs/: File.py  LLM.py  Project.py  PyDefinition.py  __init__.py  __main__.py  autodocs.py  logger_config.py  main.py
autodocs/model/: __init__.py
autodocs/model/prompts/: qa.txt
autodocs/modules/: __init__.py
autodocs/modules/datamodels/: __init__.py
autodocs/modules/directory/: File.py  Project.py  __init__.py
autodocs/modules/managers/: LLMManager.py  ProjectManager.py  VectorStoreManager.py  __init__.py
autodocs/prompts/: qa.txt
autodocs/scripts/: build_vectorstore.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gpt4docs/: MainApplication.py  __init__.py  __main__.py  logger_config.py
gpt4docs/model/: DocstringLLM.py  LLM.py  ReadmeLLM.py  __init__.py
gpt4docs/model/prompts/: map.txt  qa.txt  readme.txt
gpt4docs/modules/: __init__.py
gpt4docs/modules/datamodels/: PyDefinition.py  __init__.py
gpt4docs/modules/directory/: File.py  Project.py  __init__.py
gpt4docs/modules/managers/: LLMManager.py  ProjectManager.py  VectorStoreManager.py  __init__.py
gpt4docs/scripts/: build_vectorstore.py
tests/: __init__.py  conftest.py  test_File.py  test_Project.py  test_autodocs.py
tests/data/test_package/: func1.py  func1_formatted.py  main.py  package1.py  terminal.py  time_manager.py  weather_manager.py
